--- a/Ghost_Tale/Config/DefaultGame.ini
+++ b/Ghost_Tale/Config/DefaultGame.ini
@@ -2,3 +2,6 @@
 ProjectID=2104F2D54AD5DCCA745278BDBCD93F02
 ProjectName=Top Down BP Game Template
 
+[/Script/UnrealEd.ProjectPackagingSettings]
+BuildConfiguration=PPBC_Shipping
+
