--- a/Ghost_Tale/Config/DefaultEngine.ini
+++ b/Ghost_Tale/Config/DefaultEngine.ini
@@ -2,8 +2,8 @@
 GameName=Ghost_Tale
 
 [/Script/EngineSettings.GameMapsSettings]
-EditorStartupMap=/Game/Maps/BlockoutV1.BlockOutV1
-GameDefaultMap=/Game/Maps/BlockoutV1.BlockOutV1
+EditorStartupMap=/Game/TopDown/Maps/TopDownMap.TopDownMap
+GameDefaultMap=/Game/TopDown/Maps/TopDownMap.TopDownMap
 TransitionMap=
 bUseSplitscreen=True
 TwoPlayerSplitscreenLayout=Horizontal
