--- a/Ghost_Tale/Config/DefaultEngine.ini
+++ b/Ghost_Tale/Config/DefaultEngine.ini
@@ -3,7 +3,7 @@ GameName=Ghost_Tale
 
 [/Script/EngineSettings.GameMapsSettings]
 EditorStartupMap=/Game/TopDown/Maps/TopDownMap.TopDownMap
-GameDefaultMap=/Game/TopDown/Maps/TopDownMap.TopDownMap
+GameDefaultMap=/Game/Maps/BlockoutV1.BlockOutV1
 TransitionMap=
 bUseSplitscreen=True
 TwoPlayerSplitscreenLayout=Horizontal
@@ -48,6 +48,7 @@ TileSetUpdateInterval=1.000000
 HeuristicScale=0.999000
 VerticalDeviationFromGroundCompensation=0.000000
 bForceRebuildOnLoad=True
+RuntimeGeneration=Dynamic
 
 [/Script/Engine.RendererSettings]
 r.ReflectionMethod=1
