--- a/Ghost_Tale/Config/DefaultEngine.ini
+++ b/Ghost_Tale/Config/DefaultEngine.ini
@@ -3,12 +3,17 @@ GameName=Ghost_Tale
 
 [/Script/EngineSettings.GameMapsSettings]
 EditorStartupMap=/Game/TopDown/Maps/TopDownMap.TopDownMap
-GameDefaultMap=/Game/Maps/BlockoutV1.BlockOutV1
-TransitionMap=
+LocalMapOptions=
+TransitionMap=None
 bUseSplitscreen=True
 TwoPlayerSplitscreenLayout=Horizontal
 ThreePlayerSplitscreenLayout=FavorTop
-GlobalDefaultGameMode=/Game/Blueprints/BP_GameMode.BP_GameMode_C
+FourPlayerSplitscreenLayout=Grid
+bOffsetPlayerGamepadIds=False
+GameInstanceClass=/Script/Engine.GameInstance
+GameDefaultMap=/Game/Maps/BlockoutV1.BlockOutV1
+ServerDefaultMap=/Engine/Maps/Entry.Entry
+GlobalDefaultGameMode=/Script/Engine.GameMode
 GlobalDefaultServerGameMode=None
 
 [/Script/NavigationSystem.RecastNavMesh]
