--- a/Ghost_Tale/Config/DefaultEngine.ini
+++ b/Ghost_Tale/Config/DefaultEngine.ini
@@ -11,9 +11,9 @@ ThreePlayerSplitscreenLayout=FavorTop
 FourPlayerSplitscreenLayout=Grid
 bOffsetPlayerGamepadIds=False
 GameInstanceClass=/Script/Engine.GameInstance
-GameDefaultMap=/Game/Maps/BlockoutV1.BlockOutV1
+GameDefaultMap=/Game/Maps/MainMenu_Map.MainMenu_Map
 ServerDefaultMap=/Engine/Maps/Entry.Entry
-GlobalDefaultGameMode=/Script/Engine.GameMode
+GlobalDefaultGameMode=/Game/Blueprints/BP_GameMode.BP_GameMode_C
 GlobalDefaultServerGameMode=None
 
 [/Script/NavigationSystem.RecastNavMesh]
