--- a/Ghost_Tale/Config/DefaultEngine.ini
+++ b/Ghost_Tale/Config/DefaultEngine.ini
@@ -3,7 +3,7 @@ GameName=Ghost_Tale
 
 [/Script/EngineSettings.GameMapsSettings]
 EditorStartupMap=/Game/TopDown/Maps/TopDownMap.TopDownMap
-GameDefaultMap=/Game/Maps/BlockoutV1.BlockOutV1
+GameDefaultMap=/Game/Maps/MainMenu_Map.MainMenu_Map
 TransitionMap=
 bUseSplitscreen=True
 TwoPlayerSplitscreenLayout=Horizontal
