mise à jour splash screen
y a un spashscreen (théoriquement)

--- a/Ghost_Tale/Config/DefaultGame.ini
+++ b/Ghost_Tale/Config/DefaultGame.ini
@@ -5,3 +5,8 @@ ProjectName=Top Down BP Game Template
 [/Script/UnrealEd.ProjectPackagingSettings]
 BuildConfiguration=PPBC_Shipping
 
+[/Script/MoviePlayer.MoviePlayerSettings]
+bWaitForMoviesToComplete=False
+bMoviesAreSkippable=False
++StartupMovies=SplashScreen
+
